# Commit-AI

./: .env.example  CHANGELOG.md  CHANGELOG_v1.2.0.md  CHANGELOG_v1.3.0.md  CLEANUP_REPORT.md  INSTALLATION_REPORT.md  LICENSE  PROJECT_STATUS.md  README.md  STATUS_v1.4.0.md  USAGE_GUIDE.md  demo.py  demo_hooks.py  demo_v1.4.0.py  implementation_summary_v1.3.0.py  implementation_summary_v1.4.0.py  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  setup-dev.sh  test_setup.py  test_v12.py  teste_commit.py
.github/: copilot-instructions.md
commit_ai/: __init__.py  __main__.py  ai_service.py  analytics.py  cache.py  cache_cli.py  config_manager.py  config_wizard.py  git_handler.py  git_hooks.py  hooks_cli.py  logger.py  main.py  plugins_cli.py  plugins_system.py  template_cli.py  templates.py  tui.py  version.py
commit_ai/plugins/: custom_local_ai.py
scripts/: README.md  check_version.py  update_version.py
tests/: test_ai_service.py  test_cache.py  test_git_handler.py  test_git_hooks.py
