[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "commit-ai"
version = "1.2.0"
description = "Um assistente CLI que gera mensagens de commit para o Git usando Inteligência Artificial"
authors = [
    {name = "boltreskh", email = "lucascanluiz@gmail.com"}
]
readme = "README.md"
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
requires-python = ">=3.8"
dependencies = [
    "requests>=2.31.0",
    "openai>=1.0.0",
    "anthropic>=0.3.0",
    "ollama>=0.1.0",
    "python-dotenv>=1.0.0",
    "click>=8.1.0",
    "gitpython>=3.1.40",
]

[project.scripts]
commit-ai = "commit_ai.main:main"
commit-ai-cache = "commit_ai.cache_cli:cache_cli"

[tool.setuptools.packages.find]
where = ["."]
include = ["commit_ai*"]
